# cv-ai-microservice

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/ai/: base.py  registry.py
app/ai/prompts/: cv_job_match.py  cv_review.py
app/ai/providers/: gemini_http.py  gemini_sdk.py  mock.py
app/common/: errors.py  http_client.py  logging.py  middleware.py  parsing.py  pdf.py  rate_limiter.py
app/features/cv_job_match/: router.py  schemas.py  service.py
app/features/cv_review/: router.py  schemas.py  service.py
app/features/health/: router.py
